--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html'%}
+
 {% load static %}
 <html>
     <head>
@@ -9,16 +9,17 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-           {% block content %}
-               {% for post in  posts %}
-               <div class="post"> 
-                   <div class="date">
-                   <p> published : {{ post.published_date }} </p>
-                   </div>
-                   <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-                   <p>{{ post.text|linebreaksbr }}</p>
+            <div class="page-header">
+                    <h1><a href="/">Django Girls Blog</a></h1>
+                   <a href="/">Home</a>| <a href="{% url 'about_us' %}"">About us</a>
                 </div>
-                {% endfor %}
-            {% endblock content %}    
-        </body>
+            <div class="content container"> 
+                    <div class="row">
+                        <div class="col-md-8">
+    {% block content %}
+    {% endblock %}    
+                       </div> 
+                    </div>
+             </div>       
+    </body>
 </html>
