--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
     <body>
             <div class="page-header">
                     <h1><a href="/">Django Girls Blog</a></h1>
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                    <a href="/">Home</a>| <a href="{% url 'about_us' %}"">About us</a>
                 </div>
             <div class="content container"> 
